# sumadik-shopping-list

./: .gitignore  CMakeLists.txt  README.md
include/database/: database.h
include/entity/: category.h  item.h
include/foundation/: application.h
include/service/: category_service.h  item_service.h  menu_service.h
src/: main.c
src/database/: database.c
src/database/data/: category.json  item.json
src/foundation/: application.c
src/service/: category_service.c  item_service.c  menu_service.c
